# Honeypot

./: .gitignore  Cargo.toml  README.md  cert.pem  key.pem
AI/: db.py  detect_anomalies.py  main.py  prepare_data.py  preprocessing.py  protocol_encoder.pkl  scaler_net.pkl  scaler_proc.pkl  train_model.py
AI/models/: autoencoder.onnx  autoencoder.pth
Backend/: .env  .gitignore  Cargo.toml  queries
Backend/.cargo/: config.toml
Backend/CA/: CA.crl  CA.srl  index.txt  openssl.cnf  rootCA.key  server.cnf
Backend/CA/private/: CA.key
Backend/certs/: README.md  cert.pem  key.pem  localhost-key.pem  localhost.pem  server-cert.pem  server-csr.pem  server-key.pem  server.csr
Backend/self_signed_certs/: cert.pem  key.pem
Backend/src/: app_state.rs  auth.rs  conn.rs  lib.rs  main.rs  models.rs  router.rs  schema.rs  ws.rs
Backend/src/database/: devices.rs  mod.rs  prelude.rs  users.rs
Backend/src/middleware/: require_authentication.rs
Backend/src/migrations/2025-02-21-210034_create_table_name/: up.sql
Backend/src/queries/: arp_alert_queries.rs  device_queries.rs  mod.rs  network_queries.rs  queries  tcp_alert_queries.rs  user_queries.rs
Backend/src/routes/devices/: create_device.rs  mod.rs
Backend/src/routes/users/: create_user.rs  login.rs  mod.rs
CA/: CA.crl  CA.key  CA.pem  CA.srl  client.cnf  client.csr  localhost.cnf  server.cnf
Device/: Cargo.toml  README.md
Device/certs/: CA.pem  client-cert.pem  client-key.pem  localhost.crt  localhost.crt.der  localhost.csr  localhost.key  rootCA.crt  rootCA.crt.der  rootCA.key  rootCA.pem  rootCA.srl
Device/src/: main.rs
Virtual/: Cargo.toml
Virtual/certs/: client2-cert.pem
Virtual/src/: conn.rs  lib.rs  main.rs  network_scanner.rs  ws.rs
ai/: autoencoder.py  classifier.py  main.py  model.py  preprocessing.py  scriptino.py
ai/comms/: kafka_consumer.py
ai/dataset/: Synthetic_mDNS.csv  Synthetic_mDNS_800.csv  Synthetic_mDNS_Samples.csv  Synthetic_mDNS_converted.csv  mdns_captured.csv
ai/models/: autoencoder.onnx  autoencoder.pth  autoencoder_scaler_params.json  classifier.onnx  classifier_scaler_params.json  scaler_params.json
client/: Cargo.toml
client/certs/: README  client-cert.pem  client.csr  localhost-key.pem
client/src/: main.rs
client/src/ai/: model.rs
client/src/ai/anomaly/: anomalies.rs  detection.rs  mod.rs
client/src/ai/features/: flow.rs  mod.rs  packet_features.rs
client/src/ai/models/: autoencoder.onnx  autoencoder_scaler_params.json  classifier_scaler_params.json
client/src/graph/: types.rs  utils.rs
client/src/honeypot/: create_honeypots.rs
client/src/honeypot/proxy/: ssh.rs
client/src/interfaces/: mod.rs  receiver.rs  ws.rs
common/: Cargo.toml
common/src/: certs.rs  lib.rs  packet.rs  packet_features.rs  tls.rs  types.rs
honey/: Cargo.toml
honey/certs/: README  client-cert.pem  client-key.pem  client.csr  client2-csr.pem  client2-key.pem
honey/src/: conn.rs  lib.rs  main.rs  ws.rs
honey/src/AI/: detection.rs  features.rs  mod.rs  model.rs  preprocessing.rs
honey/src/AI/models/: autoencoder.onnx
honey/src/AI/temp_features/: mod.rs  packet_features.rs
honey/src/ai/: detection.rs  mod.rs  model.rs
honey/src/ai/anomaly/: anomalies.rs  detection.rs
honey/src/ai/features/: flow.rs  mod.rs  packet_features.rs  tensor.rs
honey/src/ai/models/: autoencoder.onnx  autoencoder_scaler_params.json  classifier.onnx  classifier_scaler_params.json  scaler_params.json
honey/src/graph/: types.rs  utils.rs
honey/src/honeypot/: create_honeypots.rs  handler.rs  mod.rs  tcp.rs  virtual_node.rs
honey/src/honeypot/proxy/: ssh.rs
honey/src/interfaces/: receiver.rs  sender.rs  ws.rs
honey/src/listeners/: datalink.rs  mod.rs  network.rs  sender.rs
honey/src/network/: graph.rs  mod.rs  receiver.rs  sender.rs  ws.rs
honey/src/proxy/: ssh.rs
honey/src/trackers/: arp_tracker.rs  flow.rs  mod.rs  tcp_tracker.rs  tracker.rs
honey/src/tun/: README.md  interface.rs  interfaces.rs  main.rs  main_tun_script  mod.rs
honey/src/utilities/: network.rs
honey/src/virtual_net/: application.rs  arp_tracker.rs  graph.rs  mod.rs  node.rs  ssh.rs  tcp.rs  virtual_node.rs
server/: .env  Cargo.toml
server/certs/: README  server-cert.pem  server.csr
server/src/: app_state.rs  conn.rs  lib.rs  router.rs  ws.rs
server/src/database/: prelude.rs
server/src/database/models/: devices.rs  mod.rs  users.rs
server/src/queries/: alert_queries.rs  arp_alert_queries.rs  mod.rs  process_queries.rs
server/src/routes/devices/: create_device.rs
server/src/routes/users/: create_user.rs  logout.rs
server/src/utilities/: jwt.rs
wss_client/: Cargo.toml
wss_client/src/: lib.rs
