[package]
name = "Backend"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenv = "0.15"
axum = "0.6"
tower = "0.4"
serde = { version = "1", features = ["derive"] } 
serde_json = "1"  
jsonwebtoken = "7.2"
tokio = { version = "1", features = ["full"] } 
diesel = { version = "1.4", features = ["mysql"] }
diesel_migrations = "2.0"
bcrypt = "0.12"


