[package]
name = "honeypot"
version = "0.1.0"
edition = "2024"


[dependencies]
axum = { version = "0.7.5", features = ["macros", "ws", "http2"] }
axum-extra = { version = "0.9.3", features = ["typed-header"] }
axum-server = { version = "0.6", features = ["tls-rustls"] }
bcrypt = "0.15.1"
chrono = "0.4.23"
dotenvy = "0.15.6"
dotenvy_macro = "0.15.1"
jsonwebtoken = "9.3.0"
sea-orm = { version = "1.1.5" , features = ["macros", "runtime-tokio-rustls", "sqlx-mysql", "chrono"], default-features = false}
serde = { version = "1.0.149", features = ["derive"] }
serde_json = "1.0.89"
serde_with = "3.9.0"
tokio = { version = "1.22.0", features = ["macros", "rt-multi-thread"] }
validator = { version = "0.18.1", features = ["derive"] }

tower-http = { version = "0.5.0", features = ["fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bincode = "1.3"
