[package]
name = "honeypot"
version = "0.1.0"
edition = "2024"


[dependencies]
common = { path = "../common" }
axum = { version = "0.8.1", features = ["macros", "ws", "http2"] }
axum-server = { version = "0.6", features = ["tls-rustls"] }
bcrypt = "0.15.1"
chrono = "0.4.23"
dotenvy = "0.15.6"
dotenvy_macro = "0.15.1"
jsonwebtoken = "9.3.0"
sea-orm = { version = "1.1.5" , features = ["macros", "runtime-tokio-rustls", "sqlx-mysql", "chrono"], default-features = false}
serde = { version = "1.0.149", features = ["derive"] }
serde_json = "1.0.89"
serde_with = "3.9.0"
tokio = { version = "1.22.0", features = ["full"] }
validator = { version = "0.18.1", features = ["derive"] }
influxdb2 = "0.5.2"

tower-http = { version = "0.5.0", features = ["fs"] }

futures = "0.3"
futures-util = { version = "0.3", default-features = false }
hyper = { version = "1.0.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["http2"] }
tokio-rustls = "0.26"
tokio-tungstenite = { version = "0.20" }
tower-service = "0.3.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
rustls = { version = "0.23" }
bincode = "1.3"
x509-parser = "0.16"

# Kafka queue
rdkafka = "0.37.0"

pyo3 = { version = "0.24", features = ["auto-initialize"] }
