[package]
name = "Device"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio-tungstenite = { version = "0.26.2", features = [
    "rustls-tls-native-roots",
] }
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
futures-channel = "0.3"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
