[package]
name = "Virtual"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "../common" }
tokio-tungstenite = { version = "0.26.2", features = [
    "rustls-tls-native-roots",
] }
tokio = { version = "1.44.0", features = ["full"] }
futures-util = "0.3"
futures-channel = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }

bincode = "1.3.3"
rustls = { version = "0.23" }

libproc = "0.14"
pnet = "0.35"


