[package]
name = "common"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.22.0", features = ["full"] }

futures-util = { version = "0.3", default-features = false }
hyper = { version = "1.0.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["http2"] }
tokio-rustls = "0.26"
tower-service = "0.3.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rustls = { version = "0.23" }
rustls-pemfile = "1.0"   # Libreria per leggere file PEM        DA UPGRADARE A 2.2

bincode = "1.3"

sha2 = "0.10"
pnet = "0.35"
tract-onnx = "0.21.0"
