[package]
name = "honey"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "../common" }
tokio-tungstenite = { version = "0.26.2", features = [
    "rustls-tls-native-roots",
] }
tokio = { version = "1.44.0", features = ["full"] }
futures-util = "0.3"
futures-channel = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
petgraph = "0.7.1" 

bincode = "1.3.3"
rustls = { version = "0.23" }
rand = "0.9"
once_cell = "1.19"
lazy_static = "1.4"

libproc = "0.14"
pnet = "0.35"
tun = "0.7.13"
etherparse = "0.17"

ed25519-dalek = "2.1"
rand_core = "0.9.3"
x25519-dalek = { version = "2", features = ["static_secrets"] }
sha2 = "0.10"
ssh2 = "0.9.5"